@@ -34,6 +34,7 @@ Version 2.7.0
   * Matlab (PR#1399)
   * NASM (PR#1465)
   * Nim (PR#1426)
+  * PowerShell Session (PR#1497)
   * SQL (PR#1402)
   * SystemVerilog (PR#1436, PR#1452, PR#1454, PR#1460, PR#1462, PR#1463, PR#1464)
   * TeraTerm (PR#1337)
